# keith-shareit

./: .gitignore  Cargo.toml  README.md  flake.nix  run.sh
a/.sendme-send-15a94181f8a9d559ba30d852d8893690/: blobs.db
src/: app.rs  cli.rs  endpoint.rs  event.rs  log.rs  main.rs  notify.rs  provider.rs  receiver.rs  requester.rs  secret.rs  sender.rs  store.rs  ui.rs
src/backend/: direct.rs  endpoint.rs  mod.rs  receiver.rs  secret.rs  sender.rs  store.rs  ticket.rs
src/frontend/: app.rs  cli.rs  log.rs  mod.rs  tree.rs  tui.rs
src/ui/: app.rs  log.rs  mod.rs  tree.rs  ui.rs
