[package]
name = "keith-shareit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
data-encoding = "2.11.0"
futures-buffered = "0.2.13"
iroh = "1.0.0"
iroh-blobs = "0.103.0"
iroh-mdns-address-lookup = "0.4.0"
n0-future = "0.3.2"
num_cpus = "1.17.0"
postcard = "1.1.3"
rand = "0.10.1"
ratatui = "0.30.2"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["signal"] }
tui-tree-widget = "0.24.0"
walkdir = "2.5.0"
